# april_ros2

./: .gitignore  .gitmodules  README.md  aprilV1.rosinstall  april_ros2.rosinstall  metavision_ros_driver.rosinstall  package.xml  setup.cfg  setup.py
Documentation/: .~lock.SIM - Schema_v3.pptx#  Docker.webm  SIM - Schema_v3.pptx  SIM_SEM_IO.docx  SIM_SEM_table.pptx  Screencast from 06-02-2022 09:18:25 AM.webm
april_ros2/: README_msgs.txt  dummy.py  dummy_grasp.py  dummy_nv.py  sim.py
april_ros2/msg/: ArmKinematic.msg  EmergencyRequestStatus.msg  EndEffectorArm.msg  FatigueAnalysis.msg  HumanBehaviour.msg  HumanGraspingStrategies.msg  NeuromorphicSensing.msg  PhysicalObject.msg  RobotArm.msg  RobotGraspingStrategies.msg  RobotHand.msg  RobotHandKinematic.msg
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/april_ros2/lib/april_ros2/: cpp_executable
install/april_ros2/share/ament_index/resource_index/package_run_dependencies/: april_ros2
install/april_ros2/share/ament_index/resource_index/parent_prefix_path/: april_ros2
install/april_ros2/share/april_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sim/lib/sim/: cpp_executable  dummy_nv  sim
install/sim/share/ament_index/resource_index/parent_prefix_path/: sim
install/sim/share/sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sim/share/sim/launch/: april.launch.py
install/sim_sem_interfaces/include/sim_sem_interfaces/sim_sem_interfaces/msg/: emergency.h  emergency.hpp  environment.h  fatigue_analysis.h  human_behaviour.hpp  human_grasping_strategies.hpp  human_parameter_intention.h  human_sight.hpp  neuromorphic_sensing.hpp  robot_arm.hpp  robot_arm_kinematic.h  robot_hand.h  robot_hand.hpp  robot_hand_kinematic.h
install/sim_sem_interfaces/share/sim_sem_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sim_sem_interfaces/share/sim_sem_interfaces/cmake/: export_sim_sem_interfaces__rosidl_generator_cExport-noconfig.cmake  export_sim_sem_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_sim_sem_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_sim_sem_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake
install/sim_sem_interfaces/share/sim_sem_interfaces/msg/: FatigueAnalysis.idl  HumanBehaviour.idl  HumanHandGesture.idl  RobotArm.idl  RobotHandKinematic.idl
install/temp/share/temp/: package.sh
launch/: april.launch.py
log/: latest_build
scripts/: bridge_build.sh  build_bridge.sh  dummy.py  dummy_fa.py  dummy_grasp.py  dummy_hb.py  dummy_nc.py  nc_controller_run.sh  nc_driver_run.sh  ros2_init.sh  run_bridge.sh  run_yarp_ros.sh  sim.py
scripts/V1/: april_msgs_build.sh  bridge_build.sh  build_aprilros2.sh  first_install.sh  nc_controller_run.sh  nc_driver_run.sh  realsense_run.sh  run_bridge.sh  run_build_bridge.sh  run_yarp_ros.sh
src/: .rosinstall
src/SIM/: CMakeLists.txt  README.md  package.xml
src/SIM/SIM/: README_msgs.txt
src/SIM/SIM/msg/: Environment.msg  HumanHandGesture.msg  HumanParameterIntention.msg  HumanSight.msg
src/april_ros2/: README.md
src/april_ros2/april_ros2/msg/: HumanMotion.msg  RobotHighLatencyCorrections.msg  RobotLowLatencyCorrections.msg
src/dummy_pkg/: CMakeLists.txt  package.xml
src/dummy_pkg/src/: isim.cpp  locem.cpp  pem.cpp  pim.cpp
src/fatigue/: package.xml  setup.cfg  setup.py
src/fatigue/fatigue/: detection.py
src/grasp/: package.xml  setup.cfg  setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/april_ros2/lib/april_ros2/: dummy  dummy_fa  dummy_grasp  dummy_hb  dummy_nc  dummy_nv  sem  sim
src/install/april_ros2/share/april_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/sim/lib/sim/: dummy_fa  dummy_grasp  dummy_hb  dummy_nc
src/install/sim/share/sim/: april.launch.py  package.sh  sim.launch.py
src/install/sim_sem_interfaces/share/sim_sem_interfaces/: local_setup.sh  package.sh  package.xml
src/install/sim_sem_interfaces/share/sim_sem_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  export_sim_sem_interfaces__rosidl_generator_cExport.cmake  export_sim_sem_interfaces__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake  (+4 more)
src/install/temp/share/temp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/log/: latest_build
src/mov/: package.xml  setup.cfg  setup.py
src/mov/mov/: dummy_nc.py
src/nc_controller/: CMakeLists.txt  README.md  package.xml
src/nc_controller/src/: nc_main.cpp
src/rgb_camera/: CMakeLists.txt  package.xml
src/rgb_camera/src/: cam_main.cpp
src/sem/: CMakeLists.txt  README.md  package.xml
src/sem/src/: sem_main.cpp
src/sim/: README.md  package.xml  setup.py
src/sim/launch/: sim.launch.py  sim.launchV1.py
src/sim/sim/: dummy_nc.py  sim.py
src/sim_sem_interfaces/: CMakeLists.txt  README.md
src/sim_sem_interfaces/msg/: NeuromorphicSensing.msg
src/temp/: package.xml  setup.py
src/yarp_com_pkg/: CMakeLists.txt  package.xml
src/yarp_com_pkg/src/: yarp_com.cpp
src/yarp_ros_interfaces/: CMakeLists.txt  package.xml  yarp_ros_map.yaml
src/yarp_ros_interfaces/msg/: Vjxoutput.msg
src/yarp_ros_proxy/: CMakeLists.txt  package.xml
src/yarp_ros_proxy/src/: yrp_main.cpp
(+164 files in other folders)
