<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_pkg</name>
  <version>0.0.1</version>
  <description>Dummy package with input nodes for SIM and SEM</description>
  <maintainer email="jonathan.barmagen@iit.it">jbarmagen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>april_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
