<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>april_ros2</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="jonathan.barmagen@iit.it">YonY</maintainer>
  <license>TODO: License declaration</license>

<!--
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
-->
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ros2launch</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!--<build_type>ament_python</build_type>-->
    <build_type>ament_cmake</build_type>
  </export>
</package>
